Implemented Sleeper Username Prompt Popup

--- a/index.html
+++ b/index.html
@@ -282,6 +282,7 @@
         </section>
     </div>
 
+    <script src="api-controller.js"></script>
     <script src="script.js"></script>
 </body>
 </html>
