Sleeper Team Import fully functional

--- a/index.html
+++ b/index.html
@@ -103,121 +103,16 @@
             </div>
 
             <div class="team-container">
-                <!-- Starting Lineup -->
+                <!-- Starting Lineup - Will be populated dynamically -->
                 <div class="lineup-section">
                     <h3>Starting Lineup</h3>
-                    <div class="position-group">
-                        <h4>QB</h4>
-                        <div class="player-card">
-                            <div class="player-image">
-                                <img src="https://via.placeholder.com/60x60/1a1a2e/ffffff?text=QB" alt="Player">
-                            </div>
-                            <div class="player-info">
-                                <h5>Josh Allen</h5>
-                                <p class="position">QB - BUF</p>
-                                <div class="rating">94.2</div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="position-group">
-                        <h4>RB</h4>
-                        <div class="player-card">
-                            <div class="player-image">
-                                <img src="https://via.placeholder.com/60x60/1a1a2e/ffffff?text=RB" alt="Player">
-                            </div>
-                            <div class="player-info">
-                                <h5>Christian McCaffrey</h5>
-                                <p class="position">RB - SF</p>
-                                <div class="rating">96.8</div>
-                            </div>
-                        </div>
-                        <div class="player-card">
-                            <div class="player-image">
-                                <img src="https://via.placeholder.com/60x60/1a1a2e/ffffff?text=RB" alt="Player">
-                            </div>
-                            <div class="player-info">
-                                <h5>Austin Ekeler</h5>
-                                <p class="position">RB - LAC</p>
-                                <div class="rating">89.4</div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="position-group">
-                        <h4>WR</h4>
-                        <div class="player-card">
-                            <div class="player-image">
-                                <img src="https://via.placeholder.com/60x60/1a1a2e/ffffff?text=WR" alt="Player">
-                            </div>
-                            <div class="player-info">
-                                <h5>Tyreek Hill</h5>
-                                <p class="position">WR - MIA</p>
-                                <div class="rating">92.1</div>
-                            </div>
-                        </div>
-                        <div class="player-card">
-                            <div class="player-image">
-                                <img src="https://via.placeholder.com/60x60/1a1a2e/ffffff?text=WR" alt="Player">
-                            </div>
-                            <div class="player-info">
-                                <h5>Davante Adams</h5>
-                                <p class="position">WR - LV</p>
-                                <div class="rating">88.7</div>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="position-group">
-                        <h4>TE</h4>
-                        <div class="player-card">
-                            <div class="player-image">
-                                <img src="https://via.placeholder.com/60x60/1a1a2e/ffffff?text=TE" alt="Player">
-                            </div>
-                            <div class="player-info">
-                                <h5>Travis Kelce</h5>
-                                <p class="position">TE - KC</p>
-                                <div class="rating">91.3</div>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- Dynamic content will be added here by JavaScript -->
                 </div>
 
-                <!-- Bench -->
+                <!-- Bench - Will be populated dynamically -->
                 <div class="bench-section">
                     <h3>Bench</h3>
-                    <div class="bench-players">
-                        <div class="player-card bench">
-                            <div class="player-image">
-                                <img src="https://via.placeholder.com/50x50/1a1a2e/ffffff?text=RB" alt="Player">
-                            </div>
-                            <div class="player-info">
-                                <h5>Saquon Barkley</h5>
-                                <p class="position">RB - NYG</p>
-                                <div class="rating">85.2</div>
-                            </div>
-                        </div>
-                        <div class="player-card bench">
-                            <div class="player-image">
-                                <img src="https://via.placeholder.com/50x50/1a1a2e/ffffff?text=WR" alt="Player">
-                            </div>
-                            <div class="player-info">
-                                <h5>Stefon Diggs</h5>
-                                <p class="position">WR - BUF</p>
-                                <div class="rating">87.9</div>
-                            </div>
-                        </div>
-                        <div class="player-card bench">
-                            <div class="player-image">
-                                <img src="https://via.placeholder.com/50x50/1a1a2e/ffffff?text=QB" alt="Player">
-                            </div>
-                            <div class="player-info">
-                                <h5>Lamar Jackson</h5>
-                                <p class="position">QB - BAL</p>
-                                <div class="rating">89.1</div>
-                            </div>
-                        </div>
-                    </div>
+                    <!-- Dynamic content will be added here by JavaScript -->
                 </div>
             </div>
         </section>
