Player Search changes

--- a/index.html
+++ b/index.html
@@ -97,8 +97,8 @@
             <div class="section-header">
                 <h2><i class="fas fa-users"></i> My Team</h2>
                 <div class="team-stats">
-                    <span class="stat">Overall Rating: <strong>87.3</strong></span>
-                    <span class="stat">Projected Points: <strong>1,247</strong></span>
+                    <span class="stat">Overall Rating: <strong>--</strong></span>
+                    <span class="stat">Projected Points: <strong>--</strong></span>
                 </div>
             </div>
 
@@ -127,42 +127,28 @@
             <div class="trade-container">
                 <div class="trade-section">
                     <h3>My Team (Giving)</h3>
-                    <div class="search-box">
-                        <input type="text" placeholder="Search for players..." id="myTeamSearch">
-                        <i class="fas fa-search"></i>
-                    </div>
-                    <div class="player-list" id="myTeamList">
-                        <div class="list-item">
-                            <div class="player-image">
-                                <img src="https://via.placeholder.com/40x40/1a1a2e/ffffff?text=RB" alt="Player">
-                            </div>
-                            <div class="player-details">
-                                <h5>Saquon Barkley</h5>
-                                <p>RB - NYG</p>
-                            </div>
-                            <div class="rating">85.2</div>
-                            <button class="add-btn">+</button>
+                    <div class="player-card placeholder add-trade-card" data-side="giving">
+                        <div class="player-image">
+                            <div class="placeholder-icon">+</div>
+                        </div>
+                        <div class="player-info">
+                            <h5>Add Player</h5>
+                            <p class="position">Click to add player</p>
+                            <div class="rating">--</div>
                         </div>
                     </div>
                 </div>
 
                 <div class="trade-section">
                     <h3>Opponent's Team (Receiving)</h3>
-                    <div class="search-box">
-                        <input type="text" placeholder="Search for players..." id="opponentSearch">
-                        <i class="fas fa-search"></i>
-                    </div>
-                    <div class="player-list" id="opponentList">
-                        <div class="list-item">
-                            <div class="player-image">
-                                <img src="https://via.placeholder.com/40x40/1a1a2e/ffffff?text=WR" alt="Player">
-                            </div>
-                            <div class="player-details">
-                                <h5>Cooper Kupp</h5>
-                                <p>WR - LAR</p>
-                            </div>
-                            <div class="rating">90.5</div>
-                            <button class="add-btn">+</button>
+                    <div class="player-card placeholder add-trade-card" data-side="receiving">
+                        <div class="player-image">
+                            <div class="placeholder-icon">+</div>
+                        </div>
+                        <div class="player-info">
+                            <h5>Add Player</h5>
+                            <p class="position">Click to add player</p>
+                            <div class="rating">--</div>
                         </div>
                     </div>
                 </div>
